--- a/package.json
+++ b/package.json
@@ -1,7 +1,11 @@
 {
   "name": "hrm-backend",
   "version": "1.0.0",
+  "type": "module",
   "main": "api/index.js",
+   "engines": {
+    "node": "18.x"
+  },
   "scripts": {
     "start": "node server.js",
     "dev": "nodemon server.js"
